--- a/bower.json
+++ b/bower.json
@@ -15,11 +15,16 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.13",
-    "angular-material": "master"
+    "angular-material": "master",
+    "d3": "~3.5.2",
+    "angular-charts": "~0.2.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
     "angular-scenario": "~1.3.0"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "d3": "~3.5.2"
+  }
 }
