--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
+    "d3": "~3.5.2",
+    "angular-charts": "~0.2.6",
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
     "bootstrap": "^3.2.0",
@@ -15,9 +17,7 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.13",
-    "angular-material": "master",
-    "d3": "~3.5.2",
-    "angular-charts": "~0.2.6"
+    "angular-material": "master"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
